Fix z-index issue in case of side menu with many modals

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -454,10 +454,6 @@ a.fr-btn[target='_blank']:after {
   overflow: hidden;
 }
 
-.over-sidemenu {
-  z-index: 99999 !important;
-}
-
 .modal-lg {
 
   .fr-col-12 {
